--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 beautifulsoup4==4.12.3
 Django==5.1.2
 django-cors-headers==4.6.0
+django-ratelimit==4.1.0
 django-storages==1.14.4
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
